@@ -8,8 +8,10 @@ python-apt (0.6.14) unstable; urgency=low
     - support for "srcrecords.Files" added
     - always run "Restart" before performing a Lookup 
   * export locking via: GetLock(),PkgSystem{Lock,UnLock} 
+  * apt/cache.py:
+    - add  __iter__ 
 
- -- 
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Sep 2005 13:24:31 +0200
 
 python-apt (0.6.13) unstable; urgency=low
 
